force-app/main/default/objects/SVMXC__Offline_Log__c/SVMXC__Offline_Log__c.object-meta.xml
<CustomObject>
    <description>This object is used to maintain a log of offline activities performed by ServiceMax offline users. The level of logging required for an organization is configurable by the ServiceMax administrator.</description>
    <label>Offline Log</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offline Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>