force-app/main/default/objects/SVMXC__Offline_Log__c/fields/SVMXC__Object_Key_Prefix__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Object_Key_Prefix__c</fullName>
    <description>Object key prefix from Salesforce</description>
    <inlineHelpText>Object key prefix from Salesforce</inlineHelpText>
    <label>Object Key Prefix</label>
    <length>30</length>
    <type>Text</type>
</CustomField>