force-app/main/default/objects/SVMXC__Offline_Log__c/fields/SVMXC__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Start_Time__c</fullName>
    <description>Timestamp when the user started the activity</description>
    <inlineHelpText>Timestamp when the user started the activity</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>