force-app/main/default/objects/SVMXC__Offline_Log__c/fields/SVMXC__User__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce user that initiated or was responsible for the activity</description>
    <inlineHelpText>Salesforce user that initiated or was responsible for the activity</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offline_Log</relationshipName>
    <type>Lookup</type>
</CustomField>